Add additional info as organization, developers and licenses to pom.xml